--- a/src/app/home/homepage/faqs/faqs.component.css
+++ b/src/app/home/homepage/faqs/faqs.component.css
@@ -1,6 +1,6 @@
   body {
     margin: 0;
-    padding: 5rem 2rem 10rem 2rem;
+    padding: 5rem 2rem 5rem 2rem;
   }
   
   .container {
@@ -10,36 +10,31 @@
   
   .title-container {
     text-align: center;
-    margin-bottom: 4rem;
+    padding: 0 0 30px 0;
   }
-  
-  .title {
-    font-size: 2rem;
-    color: white;
-    font-weight: normal;
-  }
-  
-  .faq-grid {
-    display: grid;
-    grid-template-columns: 2fr 5fr;
-    gap: 4rem 2rem;
-    align-items: start;
+
+  .faq-banner {
+    width: 100%;;
   }
   
   .faq-category-title {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font-weight: normal;
+    text-align: center;
   }
   
   .faqs-container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 40px;
   }
   
   .faq {
-    border-bottom: 1px solid #666;
-    padding-bottom: 0.5rem;
+    border: 1px solid rgb(233, 224, 224);
+    padding: 20px;
     cursor: pointer;
+    background-color: rgb(253, 249, 249);
   }
   
   .faq-question {
@@ -81,10 +76,7 @@
   
   /* Responsive */
   @media (max-width: 780px) {
-    .faq-grid {
-      grid-template-columns: 1fr;
-      gap: 0rem 1rem;
-    }
+
     .faq-category {
       text-align: left
     }
