--- a/src/app/home/homepage/faqs/faqs.component.html
+++ b/src/app/home/homepage/faqs/faqs.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="title-container">
             <!-- <h1 class="title">FREQUENTLY ASKED QUESTIONS</h1> -->
-             <img src="/images/faqs.png" alt="FAQ Banner" class="faq-banner">
+             <div class="faq-banner"></div>
         </div>
     
         <div class="faq-grid">
