remove contact page

--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -14,7 +14,7 @@
 
     <!-- <app-faqs id="faqs"></app-faqs> -->
 
-    <app-contact-me id="contactMe"></app-contact-me>
+    <!-- <app-contact-me id="contactMe"></app-contact-me> -->
 
     
     <!-- <app-banner></app-banner> -->
