--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -21,6 +21,7 @@
                 <a class="link" (click)="routeTo('/testimonials', $event)">Testimonials</a>
                 <a class="link" (click)="routeTo('/inspo', $event)">Inspo</a>
                 <a class="link" (click)="routeToReview()">Leave a Review</a>
+                <a class="link" (click)="routeToEmail()">Contact Us</a>
             </div>
         </div>
         <div class="right-container">
