--- a/src/app/home/homepage/about/about.component.css
+++ b/src/app/home/homepage/about/about.component.css
@@ -4,7 +4,7 @@ body {
 
 .container {
     display: grid;
-    padding: 75px 100px 40px 100px;
+    padding: 75px 80px 40px 80px;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-items: start;
@@ -36,12 +36,8 @@ body {
     justify-content: center;
 }
 
-.custom-right-container {
-    position: relative;
-}
 
 .custom-image {
-    /* width: auto; */
     width: 100%;
     max-height: 600px;
     min-height: 250px;
@@ -51,14 +47,7 @@ body {
 .custom-text {
     font-size: 1.1rem;
     line-height: 1.5;
-}
-
-.footer {
-    margin: 0;
-    padding: 0;
-    font-size: 3rem;
-    right: -20px;
-    position: absolute;
+    padding-top: 10px;
 }
 
 @media (max-width: 915px) {
@@ -73,14 +62,15 @@ body {
     }
 
     .custom-image {
-    width: 100%; 
-    height: auto; 
-  }
+        width: 100%;
+        height: auto; 
+    }
 }
 
 @media (max-width: 700px) {
     .container {
         gap: 25px;
+        margin-top: 20px;
     }
 
     .custom-left-container,
@@ -88,23 +78,23 @@ body {
         aspect-ratio: 4/5;
     }
 
-    .footer {
-        right: 0px;
-    }
-
     .page-title {
         font-size: 1.5rem;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 615px) {
+
+    body {
+        background: white;
+    }
 
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 10px 30px 10px 30px;
+        padding: 10px 30px 0 30px;
     }
 
     .custom-left-container,
@@ -113,12 +103,6 @@ body {
         text-align: center;
         align-items: center;
         justify-content: center;
-    }
-
-    .footer {
-        position: relative;
-        font-size: 2.5rem;
-        text-align: right;
     }
 
     .custom-image {
