--- a/src/app/home/homepage/custom/custom.component.css
+++ b/src/app/home/homepage/custom/custom.component.css
@@ -89,7 +89,7 @@ body {
 @media (max-width: 600px) {
 
     body {
-        background: linear-gradient(to right, white 65%, #f1e3e0 35%);
+        background: white;
     }
 
     .container {
