--- a/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/backoffice/admin-dashboard/admin-dashboard.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="links-container sidebar-container">
                 <a routerLink="/admin" class="links">DASHBOARD</a>
-                <a routerLink="reservations" class="links">ORDERS</a>
+                <a routerLink="reservations" class="links">RESERVATIONS</a>
                 <a routerLink="products" class="links">PRODUCTS</a>
                 <a routerLink="reviews" class="links">REVIEWS</a>
                 <a routerLink="blockout-dates" class="links">BLOCKOUTS</a>
