--- a/src/app/backoffice/admin-reservations/admin-reservations.component.css
+++ b/src/app/backoffice/admin-reservations/admin-reservations.component.css
@@ -24,7 +24,7 @@
     padding: 10px 25px;
     margin: 20px 20px 20px 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 15px;
     background-color: #b6c9b3;
 }
